--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,4 +1,8 @@
-$font-family: 'Open Sans', sans-serif;
-$font-size: 14px;
+$font-family-base: 'Open Sans', sans-serif;
+$font-size-base: 14px;
+$font-weight-base : 400;
+$line-height-base: 16px;
 
 $color-primary: #000;
+$body-color: #000;
+$body-bg: #000;
