--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -3,6 +3,9 @@ $font-size-base: 14px;
 $font-weight-base : 400;
 $line-height-base: 16px;
 
-$color-primary: #000;
-$body-color: #000;
-$body-bg: #000;
+$black: #000;
+$white: #fff;
+
+$body-color: $white;
+$body-bg: $black;
+$color-primary: #292929;
