--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,58 +1,1 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  .section-container{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .background-section-one{
-    background-image: url(../assets/bg.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .background-section-two{
-    background-image: url(../assets/bg2.jpeg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  .card-container{
-    background: #fff;
-    border-radius: 25px;
-    padding: 25px;
-    max-width: 450px;
-  }
-  
-  input{
-    width: 100%;
-    height: 30px;
-    margin-bottom: 10px;
-    text-align: center;
-    border-radius: 12px;
-    background: #000;
-    color: #fff
-  }
-  
-  form{
-    display: grid;
-  }
-  
-  footer{
-    height: 150px;
-    padding: 25px;
-    text-align: center;
-    background-color: #000;
-    color: #fff;
-  }
+*{margin:0;padding:0}*,::after,::before{box-sizing:border-box}html{font-size:14px;font-family:"Open Sans",sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent;text-rendering:optimizeLegibility;-moz-osx-font-smoothing:grayscale;font-smoothing:antialiased;-webkit-font-smoothing:antialiased}body{margin:0;font-family:"Open Sans",sans-serif;font-weight:400;line-height:16px;color:#fff;background-color:#000;text-align:left}.container{max-width:1280px;width:100%;display:flex;flex-wrap:wrap;flex-direction:column;align-items:center;align-content:center;justify-content:center}.header{display:flex;flex-wrap:wrap;align-items:center;align-content:center;justify-content:space-between;min-height:60px}.header .container{flex-direction:row;justify-content:space-between}.footer{display:flex;flex-wrap:wrap;flex-direction:column;align-items:center;align-content:center;justify-content:center;min-height:90px}.section{display:flex;min-height:100vh;flex-wrap:wrap;flex-direction:column;align-items:center;align-content:center;justify-content:center}.section.section-form{background-color:#292929}.section-form__form{display:flex;flex-wrap:wrap;flex-direction:column;align-items:center;align-content:center;justify-content:center;width:100%}.section-form__form .section-form__input-name{text-indent:9px;min-height:40px;width:100%;max-width:200px;border-radius:50px;margin-bottom:10px}.section-form__form .section-form__input-email{text-indent:9px;min-height:40px;width:100%;max-width:200px;border-radius:50px;margin-bottom:10px}
